--- a/Readme
+++ b/Readme
@@ -1,4 +1,1 @@
-Gen_server-complaint exmpp-based jabber bot, very stupid so far.
-Credits:
-* Process One - exmpp
-* tonyg - erlang-rfc4627
+Scalable jabber bot, based on exmpp.
